Change directories, add dependencies, change jar path with resources in init method